--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		]
 	},
 	"dependencies": {
+		"@sentry/sveltekit": "^9",
 		"nodemailer": "^6.10.0",
 		"sharp": "^0.33.5",
 		"svelte-email": "^0.0.4"
